added C+False in package.json

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "start": "craco start",
-    "build": "craco build",
+    "build": "CI=False && craco build",
     "test": "craco test",
     "eject": "react-scripts eject",
     "build:style": " tailwind build src/styles/index.css -o src/styles/tailwind.css"
